<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#89CDAB"
                android:gravity="center"
                android:text="@string/Notes_title"
                android:textColor="#F00F"
                android:textStyle="bold"/>


            <Spinner
                android:id="@+id/noteSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/noteShowButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="3"
                    android:background="#3456DC"
                    android:text="@string/Notes_show_button"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/noteNewNoteButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="#11FF11"
                    android:gravity="center"
                    android:text="@string/Notes_add_button" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/noteDeleteButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="3"
                    android:background="#F44336"
                    android:text="@string/Notes_delete_button"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/noteAddLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/Notes_File_Name"
                    android:textColor="#000014"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/noteNameText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:hint="Note name"
                    android:inputType="text">

                </EditText>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/noteEditTextNote"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:gravity="start"
                            >

                        </EditText>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/noteSaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="#11FF11"
                    android:text="@string/save_button">

                </Button>
                <Button
                    android:id="@+id/noteBackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back_button"
                    android:textColor="#FFFFFF"
                    android:background="#FF0000"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
