<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AraActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/mailButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="13"
                        android:background="@drawable/mail_icon"
                        android:gravity="bottom|center_horizontal">
                    </Button>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:text="@string/Ara_mail"
                        android:gravity="center"
                        android:textColor="#000831"
                        android:textStyle="bold"
                        android:background="#C4D5FF"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/userListButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="13"
                        android:background="@drawable/user_list_icon"
                        android:gravity="bottom|center_horizontal"
                        >
                    </Button>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:text="@string/Ara_userlist"
                        android:gravity="center"
                        android:textColor="#000831"
                        android:textStyle="bold"
                        android:background="#C4D5FF"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/userDetailsButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="13"
                        android:background="@drawable/user_detail_icon"
                        android:gravity="bottom|center_horizontal"
                        >
                    </Button>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:text="@string/Ara_userdetail"
                        android:gravity="center"
                        android:textColor="#000831"
                        android:textStyle="bold"
                        android:background="#C4D5FF"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/userNoteButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="13"
                        android:background="@drawable/note_icon"
                        android:gravity="bottom|center_horizontal"
                        >
                    </Button>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:text="@string/Ara_usernotes"
                        android:gravity="center"
                        android:textColor="#000831"
                        android:textStyle="bold"
                        android:background="#C4D5FF"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/sensorListButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="13"
                        android:background="@drawable/sensor_icon"
                        android:gravity="bottom|center_horizontal"
                        >
                    </Button>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:text="@string/Ara_sesnsorlist"
                        android:gravity="center"
                        android:textColor="#000831"
                        android:textStyle="bold"
                        android:background="#C4D5FF"/>
                </LinearLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>